<resources>
    <string name="app_name">Troopes</string>
    <string name="facebook_application_id" translatable="false">213907572633115</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb213907572633115</string>
    <string name="partnerKey">7btQU0de34497c321453ba71d5f3681b53c49</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="goto_product_button">Go to list</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Product Screen -->
    <string name="_48_hours_delivery">48 hours delivery</string>
    <string name="_7_day_return">7 Days Return</string>
    <string name="full_package">Full Package</string>
    <string name="other_variants_title">Other Variants</string>
    <string name="color_and_size_title">Color and Size</string>
    <string name="reviews_title">Reviews</string>
    <string name="product_description_title">Product Description</string>
    <string name="similar_products_title">Similar Products</string>

    <!-- Product Screen Bottom Sheet -->
    <string name="_48_hours_delivery_service">48 hours delivery</string>
    <string name="_7_days_return">7 Days return</string>
    <string name="full_package_title">Full package</string>
    <string name="if_delivery_is_not_reached_in_time_more_discount">If delivery is not reached in time, more discount</string>
    <string name="all_goods_are_unconditional">All goods are unconditional</string>
    <string name="service_description">Service Description</string>

    <!-- Order Screen -->
    <string name="payment_method">Payment Method</string>
    <string name="quantity_title">Quantity</string>

    <!-- Product Option Screen -->
    <string name="choose_button">Choose</string>
    <string name="color_heading">Color</string>
    <string name="variant_heading">Variant</string>
    <string name="quantity_heading">Quantity</string>
    <string name="size_heading">Size</string>
    <string name="find_if_seller_ships_or_not">Find if seller ships or not</string>
    <string name="enter_pincode">Enter Pincode</string>

    <!-- Search Screen -->
    <string name="search_for_anything">Search for anything</string>
    <string name="see_more">See More</string>

    <!-- Add a new Address Dialog -->
    <string name="add_a_new_shipping_address">Add a new shipping address</string>
    <string name="name_selection_area">Name, Selection area</string>
    <string name="phone">Phone</string>
    <string name="region">Region</string>
    <string name="detailed_address">Detailed address</string>
    <string name="save">Save</string>

    <string name="save_address">Save</string>
    <!--Order Pending Fragment -->
    <string name="time_left">Time Left</string>
    <string name="required_1_person_to_invite_to_finish_order">Required 1 person to invite to finish order</string>
    <string name="invite_friends_from_whatsapp">Invite Friends from WhatsApp</string>

    <!--Accounts Fragment-->
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_orders">My Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="account_settings">Account Settings</string>
    <string name="my_profile">My Profile</string>

    <!--My Profile Fragment-->
    <string name="edit_photo">Edit photo</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="save_profile">Save</string>

    <!--Address-->
    <string name="phone_number">Phone Number:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_a_new_address">Add a new address</string>

    <!--Account Setting -->
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="retype_your_current_password">Retype your current password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="add_change_address">Add/Change Address</string>
    <string name="save_account_setting">Save</string>

    <!--Add Address Screen-->
    <string name="city">City</string>
    <string name="landmark">Landmark</string>
    <string name="colony_street_locality">Colony / Street / Locality</string>
    <string name="flat_house_no_floor_building">Flat / House No./ Floor/ Building</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="pincode">Pincode</string>

    <!--Wishlist screen-->
    <string name="see_items">See items</string>
    <string name="no_items_has_been_wishlisted_by_you">No items has been wishlisted by you</string>
    <string name="no_item_has_been_ordered_by_you">No item has been ordered by you</string>

    <!--Search Fragment: Trending Tags-->
    <string name="recent">Recent</string>
    <string name="trending">Trending</string>

    <!--Order Address select screen-->
    <string name="quantity">Quantity:</string>
    <string name="pay">Pay</string>

    <!--Join Screen -->
    <string name="required_1_person_only_to_finish_order">Required 1 person only to finish order</string>
    <string name="join">Join</string>

    <!--Write a review screen-->
    <string name="rate_this_product">Rate this product</string>
    <string name="submit">Submit</string>
    <string name="add_image">Add Image</string>
    <string name="tell_us_how_is_your_experience_with_this_product">Tell us how is your experience with this product?</string>
    <string name="write_a_review">Write a review</string>
</resources>
