<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_grey_border"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/add_a_new_shipping_address"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_grey_border"
        android:hint="@string/name_selection_area"
        android:maxLines="1"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/phone_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_grey_border"
        android:hint="@string/phone"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading" />

    <LinearLayout
        android:id="@+id/region"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_grey_border"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_area">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:textColor="#191919"
            android:textSize="16sp" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:src="@drawable/more_info_right_arrow" />
    </LinearLayout>

    <EditText
        android:id="@+id/detailed_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rectangle_grey_border"
        android:hint="@string/detailed_address"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/region" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bg_oval_view_red"
        android:padding="8dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_address" />

</android.support.constraint.ConstraintLayout>